Fixed Time component not showing pre-selected item
* WIP. Fixed issue at desktop size, working on mobile.
* Fixed Time component issues for mobile width.

--- a/src/global_styling/react_date_picker/_date_picker.scss
+++ b/src/global_styling/react_date_picker/_date_picker.scss
@@ -326,6 +326,7 @@
         flex-grow: 1;
         overflow-y: auto;
         align-items: center;
+        min-width: 90px; // Safari bug where list width collapses
 
         li.react-datepicker__time-list-item {
           padding: $euiSizeXS $euiSizeS;
